Connect to database on server - test localhost

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=capcom
 spring.datasource.password=iH4@65q4
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/myapi?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.2.44:3306/myapi?useTimezone=true&serverTimezone=UTC
 
 #debug=true
 enableLoggingRequestDetails=true
