--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,14 @@ spring.datasource.url=jdbc:mysql://192.168.2.44:3306/myapi?useTimezone=true&serv
 enableLoggingRequestDetails=true
 
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore/innovate.p12
+#server.ssl.key-store=classpath:keystore/innovate.p12
 # The password used to generate the certificate
-server.ssl.key-store-password=susanne
+#server.ssl.key-store-password=susanne
 # The alias mapped to the certificate
-server.ssl.key-alias=innovate
+#server.ssl.key-alias=innovate
 
-server.ssl.enabled=true
-security.require-ssl=true
-server.port=8443
+#server.ssl.enabled=true
+#security.require-ssl=true
+#server.port=8443
